# monGARS

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .prettierignore  AGENTS.md  API Endpoints Documentation  CURATION_GUIDE.md  Dockerfile  Dockerfile.embedded  Dockerfile.embedded.gpu  Dockerfile.gpu  Dockerfile.rayserve  Dockerfile.rayserve.gpu  LICENSE  Makefile  README.md  ROADMAP.md  alembic.ini  app.py  build_and_wrap.py  build_embedded.sh  build_native.sh  build_unified_dolphin_x1_enhanced.py  code.txt  config.py  doc-retrieval.yaml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.searxng.yml  docker-compose.yml  docker-compose.yml.bak  dolphin_llm2vec_pipeline.py  dolphin_x1_unsloth_pipeline.py  eslint.config.js  fix_compose_gpu.py  init_db.py  inventory.json  jest.config.cjs  (+19 more)
.github/: PULL_REQUEST_TEMPLATE.md
.tools/: inventory.py
TODO/: CRITICAL_FUNCTION_PROMPTS.jsonl  CRITICAL_FUNCTION_PROMPTS.md  INDEX.csv
alembic/: env.py
alembic_migrations/: __init__.py  env.py
app/: __init__.py  main.py
configs/: llm_models.json
datasets/: formatted_dataset 2.jsonl
docs/: AGENTS.md  advanced_fine_tuning.md  code_audit_summary.md  codebase_status_report.md  conversation_workflow.md  deployment_automation.md  deployment_simulation.md  documentation_maintenance.md  dolphin3_chat_embeddings.md  dolphin_x1_chat_embeddings.md  french_dataset_pipeline.md  implementation_status.md  incomplete_logic_audit.md  index.md  iris_overview.md  model_loading_inference_code_locations.md  model_management.md  mongars_multistage_pipeline.md  next_implementation_priority.md  rag_context_enrichment.md  rag_dataset_governance.md  ray_serve_deployment.md  reinforcement_rollout_runbook.md  repo_memory_alignment.md  testing.md  (+4 more)
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: chat_cli.py  peer_metrics.py
sdks/python/monGARS_sdk/: __init__.py  client.py  exceptions.py  models.py
(+560 files in other folders)
