[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
files = [
    "modules/evolution_engine",
    "monGARS/core/inference_utils.py",
    "monGARS/utils/database.py",
]
mypy_path = ["typings"]
explicit_package_bases = true

