[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
packages = ["modules.evolution_engine"]
modules = [
    "monGARS.core.inference_utils",
    "monGARS.utils.database",
]
mypy_path = ["typings"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "PIL.*",
    "redis.*",
]
ignore_missing_imports = true

