[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
files = [
    "modules/evolution_engine",
    "monGARS/__init__.py",
    "monGARS/core/inference_utils.py",
    "monGARS/utils/database.py",
]
mypy_path = ["typings"]
explicit_package_bases = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "PIL.*",
    "redis.*",
]
ignore_missing_imports = true

